--- a/누적 레벨.html
+++ b/누적 레벨.html
@@ -13,7 +13,7 @@
       60 ~ 150 벨테인 특별조(문을 지키는 자, 배수의 진)<br>
       150 ~ 200 알비 상급 하드모드 던전
 
-      <a href="마비노기 정보.html" title="메인화면"><h2>메인으로</h2>
+      <a href="index.html" title="메인화면"><h2>메인으로</h2>
       </p>
     </body>
 </HTML>
