--- a/수정노기.html
+++ b/수정노기.html
@@ -29,5 +29,5 @@
       </ol>
     </p>
   </body>
-  <a href="마비노기 정보.html" title="메인"><h2>메인으로<h2>
+  <a href="index.html" title="메인"><h2>메인으로<h2>
 </HTML>
