--- a/탐험 레벨.html
+++ b/탐험 레벨.html
@@ -25,6 +25,6 @@
         </p>
       </ol>
     </p>
-    <a href="마비노기 정보.html" title="메인으로"><h2>메인으로</h2>
+    <a href="index.html" title="메인으로"><h2>메인으로</h2>
   </body>
 </HTML>
